--- a/public/index.html
+++ b/public/index.html
@@ -128,9 +128,7 @@
         
         </footer>
         <!-- JS -->
-            <script type="text/javascript" src="http://ff.kis.v2.scr.kaspersky-labs.com/2C784713-A8DB-3C4A-8A74-254B9B10F078/main.js" charset="UTF-8"></script>
-            <script src="http://code.jquery.com/jquery-1.12.0.min.js"></script> 
-            <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script> 
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
             <script src="js/index.js"></script>
     </body>
 </html>
