--- a/public/index.html
+++ b/public/index.html
@@ -1,97 +1,129 @@
 <!DOCTYPE html>
-<html lang = "pt-BR">
+<html lang="pt-BR">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Nova Alfort Serviços Expressos</title>
+    <meta
+      name="description"
+      content="Solução em transporte com Kombi, Pickup, Sprinter e Caminhão. Atuando no mercado de entregas, fretes, carretos e seviços de distribuição e coletas ponto a ponto de mercadoreias, documentos. Nosso diferencial está na qualidade, segurança, economia e rapidez."
+    />
+    <meta
+      name="keywords"
+      content="entregas, fretes, carretos e seviços de distribuição"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Luciele Rangel" />
+    <link rel="stylesheet" href="style/css-index.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:300,400,700"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="img/icon.jpeg" />
+  </head>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Nova Alfort Serviços Expressos </title>
-    <meta name="description" content="Solução em transporte com Kombi, Pickup, Sprinter e Caminhão. Atuando no mercado de entregas, fretes, carretos e seviços de distribuição e coletas ponto a ponto de mercadoreias, documentos. Nosso diferencial está na qualidade, segurança, economia e rapidez.">
-    <meta name="keywords" content="entregas, fretes, carretos e seviços de distribuição">
-    <meta name="robots" content="index, follow">
-    <meta name="author" content="Luciele Rangel">
-    <link rel="stylesheet" href="style/css-index.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" />
-    <link rel="icon" href="img/icon.jpeg">
-</head>
-
-<body>
+  <body>
     <header class="cabecalho">
-        <a href="index.html"><h1 class="logo">Nova Alfort Serviços Expressos</h1></a>
-        <nav class="menu">
-
-        </nav>
-        <div class="telefone-destaque">
-            <p>(21) 2580-7531/ (21) 3895-9935 / <i class="fa fa-whatsapp"></i> (21) 96494-3664</p>
-        </div>
+      <a href="index.html"
+        ><h1 class="logo">Nova Alfort Serviços Expressos</h1></a
+      >
+      <nav class="menu"></nav>
+      <div class="telefone-destaque">
+        <p>
+          (21) 2580-7531/ (21) 3895-9935 / <i class="fa fa-whatsapp"></i> (21)
+          96479-1973
+        </p>
+      </div>
     </header>
     <!-- BANNER -->
     <div class="banner container">
-        <div class="title">
-            <h2> BEM VINDOS A ALFORT! </h2>
-            <h3> Transportamos e entregamos com rapidez e segurança em todo Rio de Janeiro e Grande Rio.</h3>
-        </div>
-        <div class="buttons">
-            <a href="#contato">
-                    <!-- <button class="btn btn-orcamento bg-white radius">
+      <div class="title">
+        <h2>BEM VINDOS A ALFORT!</h2>
+        <h3>
+          Transportamos e entregamos com rapidez e segurança em todo Rio de
+          Janeiro e Grande Rio.
+        </h3>
+      </div>
+      <div class="buttons">
+        <a href="#contato">
+          <!-- <button class="btn btn-orcamento bg-white radius">
                         Solicite seu Orçamento!
                     </button> -->
-            </a>
-        </div>
+        </a>
+      </div>
     </div>
 
     <!-- SERVICOS -->
     <main class="servicos container">
-        <article class="servico bg-white radius">
-            <div class="inner">
-                <a> Nossa Empresa </a>
-                <h4>Oferecemos mais comodidade e economia aos nossos clientes</h4>
+      <article class="servico bg-white radius">
+        <div class="inner">
+          <a> Nossa Empresa </a>
+          <h4>Oferecemos mais comodidade e economia aos nossos clientes</h4>
 
-                <p>O objetivo de nossa Empresa é oferecer tranquilidade, segurança e colaboração à nossos clientes. Desde
-                    2000 NOVA ALFORT SERVIÇOS EXPRESSOS LTDA vem atuando no mercado de entregas, fretes, Carretos e serviços
-                    de distribuição e coletas ponto a ponto de mercadorias, documentos, Nosso diferencial está na qualidade,
-                    segurança, economia e rapidez.</p>
-                <p>A equipe de distribuição da Alfort é composta por profissionais com grande experiência em Logística e
-                    preocupados com a constante necessidade de aprimoramento do serviços.</p>
+          <p>
+            O objetivo de nossa Empresa é oferecer tranquilidade, segurança e
+            colaboração à nossos clientes. Desde 2000 NOVA ALFORT SERVIÇOS
+            EXPRESSOS LTDA vem atuando no mercado de entregas, fretes, Carretos
+            e serviços de distribuição e coletas ponto a ponto de mercadorias,
+            documentos, Nosso diferencial está na qualidade, segurança, economia
+            e rapidez.
+          </p>
+          <p>
+            A equipe de distribuição da Alfort é composta por profissionais com
+            grande experiência em Logística e preocupados com a constante
+            necessidade de aprimoramento do serviços.
+          </p>
 
-                <p>Entregas rápidas através de veículos utilitário e caminhões, oferecendo assim ao cliente Os serviços de
-                    transporte com a tecnologia necessária para entregas curtas, médias e Longas distância. </p>
-            </div>
-        </article>
-        <article class="servico bg-white radius">
-            <div class="inner">
-                <a> Serviços</a>
-                <h4>Oferecemos transporte, entrega ponto a ponto. Economize seu tempo</h4>
-                <p> Equipe treinada e qualificada para o melhor atendimento capacitados para proporcionar maior conforto,
-                    agilidade, praticidade, segurança e garantia de um melhor atendimento ao cliente. Várias opções de transporte
-                    para sua que sua carga seja entregue com segurança e rapidez. </p>
-
-                <div class="list">
-                    <ul>
-                        <li>Transporte encomendas rápidas e urgentes</li>
-                        <li>Aluguel de Kombi, pickup, vans e caminhões</li>
-                        <li>Retirada de carga e encomendas</li>
-                        <li>Mudanças e Carretos</li>
-                        <li>Coleta de Encomendas</li>
-
-                    </ul>
-                </div>
-            </div>
-        </article>
-
-
-        <div class="imagens-frota">
-            <a> Conheça Nossa Frota</a>
-
-            <ul>
-                <li><img src="img/frota1.jpeg" /></li>
-                <li><img src="img/frota2.jpeg" /></li>
-                <li><img src="img/frota3.jpeg" /></li>
-                <li><img src="img/frota4.jpeg" /></li>
-                <li><img src="img/frota5.jpeg" /></li>
-            </ul>
+          <p>
+            Entregas rápidas através de veículos utilitário e caminhões,
+            oferecendo assim ao cliente Os serviços de transporte com a
+            tecnologia necessária para entregas curtas, médias e Longas
+            distância.
+          </p>
         </div>
-        <!-- <div class ="container  " id="formulario">
+      </article>
+      <article class="servico bg-white radius">
+        <div class="inner">
+          <a> Serviços</a>
+          <h4>
+            Oferecemos transporte, entrega ponto a ponto. Economize seu tempo
+          </h4>
+          <p>
+            Equipe treinada e qualificada para o melhor atendimento capacitados
+            para proporcionar maior conforto, agilidade, praticidade, segurança
+            e garantia de um melhor atendimento ao cliente. Várias opções de
+            transporte para sua que sua carga seja entregue com segurança e
+            rapidez.
+          </p>
+
+          <div class="list">
+            <ul>
+              <li>Transporte encomendas rápidas e urgentes</li>
+              <li>Aluguel de Kombi, pickup, vans e caminhões</li>
+              <li>Retirada de carga e encomendas</li>
+              <li>Mudanças e Carretos</li>
+              <li>Coleta de Encomendas</li>
+            </ul>
+          </div>
+        </div>
+      </article>
+
+      <div class="imagens-frota">
+        <a> Conheça Nossa Frota</a>
+
+        <ul>
+          <li><img src="img/frota1.jpeg" /></li>
+          <li><img src="img/frota2.jpeg" /></li>
+          <li><img src="img/frota3.jpeg" /></li>
+          <li><img src="img/frota4.jpeg" /></li>
+          <li><img src="img/frota5.jpeg" /></li>
+        </ul>
+      </div>
+      <!-- <div class ="container  " id="formulario">
             <form>
                 <div class="form-group">
                   <label for="exampleInputEmail1">Email</label>
@@ -108,42 +140,49 @@
                 <button type="submit" class="btn btn-primary">Submit</button>
               </form>   
         </div> -->
-        <div class="social">
-
-            <a href=" http://api.whatsapp.com/send?1=pt_BR&phone=5521964943664"><img src="img/whatsapp.png"></a>
-        </div>
+      <div class="social">
+        <a href=" http://api.whatsapp.com/send?1=pt_BR&phone=5521964791973"
+          ><img src="img/whatsapp.png"
+        /></a>
+      </div>
     </main>
 
     <!--RODAPÉ-->
 
     <footer class="rodape container">
-        <table>
-            <tr>
-                <td>Contato</td>
-                <td>Localização</td>
-                <td>Forma de Pagamento</td>
-            </tr>
-            <tr>
-                <td>
-                    <p><i class="fa fa-map-marker" aria-hidden="true"></i> R. Cap. Félix, 656 - Benfica</p>
-                    <p> Rio de Janeiro - RJ</p>
-                    <p><i class="fa fa-phone" aria-hidden="true"></i> (21)2580-7531 / (21) 3895-9935 / (21) 96494-3664</p>
-                    <p><i class="fa fa-envelope" aria-hidden="true"></i> novaalfort@gmail.com</p>
-                </td>
-                <td><img src="img/mapa.png"></td>
-                <td><img src="img/pagamento.png"></td>
-            </tr>
-        </table>
-        <p class="copyright container">
+      <table>
+        <tr>
+          <td>Contato</td>
+          <td>Localização</td>
+          <td>Forma de Pagamento</td>
+        </tr>
+        <tr>
+          <td>
+            <p>
+              <i class="fa fa-map-marker" aria-hidden="true"></i> R. Cap. Félix,
+              656 - Benfica
+            </p>
+            <p>Rio de Janeiro - RJ</p>
+            <p>
+              <i class="fa fa-phone" aria-hidden="true"></i> (21)2580-7531 /
+              (21) 3895-9935 / (21) 96479-1973
+            </p>
+            <p>
+              <i class="fa fa-envelope" aria-hidden="true"></i>
+              novaalfort@gmail.com
+            </p>
+          </td>
+          <td><img src="img/mapa.png" /></td>
+          <td><img src="img/pagamento.png" /></td>
+        </tr>
+      </table>
 
-            Copyright © - 2018. Todos os direitos reservados
-
-        </p>
-
+      <p class="copyright container">
+        Copyright © - 2018. Todos os direitos reservados
+      </p>
     </footer>
     <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/index.js"></script>
-</body>
-
+  </body>
 </html>
