--- a/public/index.html
+++ b/public/index.html
@@ -124,7 +124,9 @@
         </ul>
       </div>
       <div class="social">
-        <a href=" http://api.whatsapp.com/send?1=pt_BR&phone=5521964791973"
+        <a
+          target="_blank"
+          href=" http://api.whatsapp.com/send?1=pt_BR&phone=5521964791973"
           ><img src="img/whatsapp.png"
         /></a>
       </div>
