--- a/public/contato.html
+++ b/public/contato.html
@@ -15,6 +15,15 @@
 	
 	
 </head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-85353511-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-85353511-1');
+</script>
 
 <body>
 	<header class="cabecalho">
